--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.exclude": {
     "**/*.pyc": {"when": "$(basename).py"},
     "**/__pycache__": true,
-    }
+    },
+    "python.pythonPath": "C:\\Users\\Bastien\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
