--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "**/*.pyc": {"when": "$(basename).py"},
     "**/__pycache__": true,
     },
-    "python.pythonPath": "C:\\Users\\Bastien\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+    "python.pythonPath": "C:\\Users\\Bastien\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
