--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
-version: '3'
+version: '3.4'
 services:
   web:
     image: playerla/flaskmegaturorial:latest
-    build: .
+    build:
+      context: .
+      target: runtime-image
     ports:
       - "5000:5000"
     environment: 
