Use .env file + Search engine indexing doc

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+# Set it relative to your credentials file. 
+# For Docker, Docker compose on Windows currently not support secret https://github.com/docker/compose/issues/6585
 GOOGLE_APPLICATION_CREDENTIALS='./google-credentials.json'
+
+# Password for mysql service (docker-compose)
+MYSQL_PW=k23kRu
