--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,11 @@ services:
       - "5000:5000"
     environment: 
       ELASTICSEARCH_URL: http://elasticsearch:9200
-      DATABASE_URL: mysql+pymysql://root:q22gRE@db/microblog
+      DATABASE_URL: mysql+pymysql://root:$MYSQL_PW@db/microblog
   db:
     image: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: q22gRE
+      MYSQL_ROOT_PASSWORD: $MYSQL_PW
       MYSQL_DATABASE: microblog
     volumes:
       - mysql-flask-mega-tuto:/var/lib/mysql
@@ -25,7 +25,7 @@ services:
     depends_on:
       - db
     environment: 
-      DATABASE_URL: mysql+pymysql://root:q22gRE@db/microblog
+      DATABASE_URL: mysql+pymysql://root:$MYSQL_PW@db/microblog
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.6.2
     environment:
