python-livereload support with docker compose

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,6 +38,12 @@
             "problemMatcher": []
         },
         {
+            "label": "Watch",
+            "type": "shell",
+            "command": "docker-compose -f docker-compose.yml -f compose.dev.yml up -d --build",
+            "problemMatcher": []
+        },
+        {
             "label": "Start docker-machine",
             "type": "shell",
             "command": "docker-machine start",
