--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -1,7 +1,10 @@
 version: '3.4'
 services:
   web:
-    entrypoint: ["/bin/sh", "-c"]
-    command: [ "pip install livereload && python watch.py" ]
+    build:
+      context: .
+      target: dev-image
+    entrypoint: ["python"]
+    command: [ "watch.py" ]
     volumes:
       - "./core:/opt/microblog/core"
