Some javascript magic : User popup

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -44,9 +44,9 @@
             "problemMatcher": []
         },
         {
-            "label": "Start docker-machine",
+            "label": "Startup",
             "type": "shell",
-            "command": "docker-machine start",
+            "command": "docker-machine start ; docker-compose -f docker-compose.yml -f compose.dev.yml up -d --build",
             "runOptions": { 
                 "runOn": "folderOpen"
             },
