Add exports_posts by mail from user profil
Implemented as background task with a rq worker (Redis)
Add Redis to Compose file
Add smtp to dev environment

--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -8,3 +8,16 @@ services:
     command: [ "watch.py" ]
     volumes:
       - "./core:/opt/microblog/core"
+  web_worker:
+    build:
+      context: .
+      target: dev-image
+    volumes:
+      - "./core:/opt/microblog/core"
+  db:
+    ports:
+      - "3306:3306"
+  smtp:
+    entrypoint: ["python", "-m", "smtpd", "-n", "-c", "DebuggingServer", "0.0.0.0:25"]
+    environment:
+      PYTHONUNBUFFERED: "True"
